--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         position: -webkit-sticky;
         position: sticky;
         top:10px;
-        background-color: rgb(0, 255, 242);
+        background-color: rgb(241, 241, 241);
         padding: 10px;
         font-size: 20px;
         margin-left: 80%;
@@ -35,7 +35,9 @@
         pre {
             font-size: 60px;
         }
+    
     </style>
+    <!--the cursor is not easy to change, svg file needed maybe?-->
 </head>
 <body style="background-color:gray">
     <!-- change backround to more 90s asthetic-->
@@ -46,24 +48,13 @@
         <a href="./weeklyshub.html"> Weeklys</a> ~
         </nav>
         
-    <div class="sticky"> sticky bob ross</div>
-    <!-- add bob ross and his text bubbles?-->
-    <pre>   Lorem ipsum dolor sit 
-        amet
-         consectetur 
-         adipisicing 
-         elit. 
-        Numquam 
-        maxime 
-        aliquid
-         sequi 
-         quasi 
-         quia
-          quisquam
-           repellendus 
-        ipsam cupiditate pariatur 
-        maiores totam distinctio, 
-        nulla quod fugiat consequatur 
-        dolores non, laborum ratione!</pre>
+    <div class="sticky"> sticky bob ross
+        <img src="./pictures/bobross.PNG" alt="Bob Ross" width="100%" height="100%">
+    </div>
+    <!-- bob ross needs to fit any screen, only set to fit the current screen. Text Bubbles? Move him to sit at the bottom
+    of the page aswell.-->
+  
+    <pre>   </pre>
+        <!-- this text is messing up the framing of the webpage, making a bottom bar to the page necessary-->
 </body>
 </html>
