--- a/webownpage.html
+++ b/webownpage.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Meet the Creator</h1>
+    <h1>See the Work!</h1>
     <a href="./index.html"> Return Home </a>
 </body>
 </html>
