--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         position: -webkit-sticky;
         position: sticky;
         top:10px;
-        background-color: rgb(241, 241, 241);
+        background-color: rgb(235, 230, 164);
         padding: 10px;
         font-size: 20px;
         margin-left: 80%;
@@ -32,8 +32,15 @@
             margin-left: 30%;
             margin-right: 30%;
         }
-        pre {
-            font-size: 60px;
+        div {
+            font-size:40px;
+            color:rgb(33, 25, 36);
+            background-color:rgb(241, 241, 241);
+        }
+        p{
+            font-size: 30px;
+            color:rgb(14, 3, 24);
+            background-color:rgb(241, 241, 241);
         }
     
     </style>
@@ -41,10 +48,10 @@
 </head>
 <body style="background-color:gray">
     <!-- change backround to more 90s asthetic-->
-    <h1 color:> Welcome to my Page!</h1>
+    <h1> Welcome to my Page!</h1>
     <nav>
         <!--make  a tags to buttons, cleaner-->
-        ~ <a href="./webownpage.html"> Meet the Creator</a> ~
+        ~ <a href="./webownpage.html"> See the Art! </a> ~
         <a href="./weeklyshub.html"> Weeklys</a> ~
         </nav>
         
@@ -52,9 +59,26 @@
         <img src="./pictures/bobross.PNG" alt="Bob Ross" width="100%" height="100%">
     </div>
     <!-- bob ross needs to fit any screen, only set to fit the current screen. Text Bubbles? Move him to sit at the bottom
-    of the page aswell.-->
+    of the page aswell or try to get the text that follows him to be closer to the top and not disrupted by him.-->
   
-    <pre>   </pre>
-        <!-- this text is messing up the framing of the webpage, making a bottom bar to the page necessary-->
+    <div> Who Am I?</div>
+    <p>Well my name is Lauren Gessel, my nickname that my friends call me is Rennie. My home town is <i style="color:green">Chardon, Ohio </i>where I grew up right next to Lake Erie and Cleveland. 
+        I attend Ohio State University and am currently on my second year as a student here but my first year being on Main Campus as my freshman year was spent at the regional campus at Newark.
+        I have a lot of favorite things!</p>
+    <p> <b style="color:Red">I love</b> nature and plants, my dorm is filled with succulents and plants that I take care of! I have a serious green thumb, if the plants under my care it’s going to survive! 
+        My biggest plant win was getting a lemon tree to produce full lemons while being indoor and in Ohio. 
+        Definitely wasn’t easy to do but I made a delicious lemon tart from the fruit!</p>
+    <p> <b style="color:Red">I love </b>art and teaching myself new artistic skills. My major is Arts and Technology so I’m hoping that my html abilities improve as time goes on!
+         This could be work that I do in my career! </p>
+    <p> <b style="color:red">I love </b>to play video games! All types and whenever I can. I love interactive worlds and how beautiful the designers are able to make the spaces appear. 
+        There is so much to enjoy about every individual game and it’s so exciting to notice the new ideas that every game can offer to the gaming world. 
+        There’s always a challenge presented to game designers in creating something new and engaging, and that is so impressive to me!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque officia quisquam temporibus iusto culpa quas ratione corrupti tempora dolorum iste nulla eum placeat officiis, 
+    amet deleniti itaque voluptatum hic repellendus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque officia quisquam temporibus iusto culpa quas ratione corrupti tempora dolorum iste nulla eum placeat officiis, 
+        amet deleniti itaque voluptatum hic repellendus.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque officia quisquam temporibus iusto culpa quas ratione corrupti tempora dolorum iste nulla eum placeat officiis, 
+            amet deleniti itaque voluptatum hic repellendus.</p>
+        <!-- this text needs to be segmented, boxes with their relative picturesto the sides. Different colored boxes?-->
 </body>
 </html>
