--- a/weeklyshub.html
+++ b/weeklyshub.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weeklys</title>
     <style>
+         body{
+         background-image:url('./pictures/retro.webp');
+         background-repeat:repeat;
+          background-size:auto; }
+        a{
+            font-family:'Courier New', Courier, monospace;
+            font-size: 20px;
+            color:whitesmoke;
+         }
         h1 {color: darkblue; 
         text-align: center;}
     </style>
 </head>
 <body>
+    <a href="./index.html"><img src="./pictures/bobross.PNG" alt="Bob Ross" width="5%" height="5%"></a>
     <h1>Weeklys List</h1>
-   <a href="./index.html"> Return Home</a>
 </body>
 </html>
