--- a/Aboutme.html
+++ b/Aboutme.html
@@ -7,41 +7,52 @@
     <title>About Me</title>
     <style> 
     body{
-         background-image:url('./pictures/wall.jpg'); background-size:cover; }
+         background-image:url('./pictures/retro.webp');
+         background-repeat:repeat;
+          background-size:auto; }
          p{
             font-size: 30px;
             color:rgb(14, 3, 24);
-            margin-right:20%;
+            margin-left:8%;
+            margin-right:8%;
             background-color:rgb(241, 241, 241);
+            font-family:'Courier New', Courier, monospace;
         }
         div {
             font-size:40px;
+            margin-left:40%;
+            margin-right:40%;
             color:rgb(33, 25, 36);
-            background-color:rgb(241, 241, 241);}
-
+            background-color:rgb(241, 241, 241);
+            font-family:'Courier New', Courier, monospace;
+            text-align:center;
+        }
          a{
             font-family:'Courier New', Courier, monospace;
             font-size: 20px;
             color:whitesmoke;
          }
+         b{
+            font-size:45px;
+            color:rgb(223, 125, 125);
+         }
          </style>
 </head>
 <body>
-    <a href="./index.html"><img src="./pictures/bobross.PNG" alt="Bob Ross" width="5%" height="5%"></a> 
-    <div style="margin-right:20%"> Who Am I?</div>
-    <img Src="./pictures/IMG_0049.PNG" alt=selfportait width="20%" height="20%">
-    <p>Well my name is Lauren Gessel, my nickname that my friends call me is Rennie. My home town is <i style="color:green">Chardon, Ohio </i>where I grew up right next to Lake Erie and Cleveland. 
+    <a href="./index.html"><img src="./pictures/bobross.PNG" alt="Bob Ross" width="7%" height="7%"></a> 
+    <div > <b>Who Am I?</b></div>
+    <p>My name is <i style="color:rgb(17, 17, 168)">Lauren Gessel</i>, my nickname that my friends call me is Rennie. My home town is <i style="color:green">Chardon, Ohio </i>where I grew up right next to Lake Erie and Cleveland. 
         I attend Ohio State University and am currently on my second year as a student here but my first year being on Main Campus as my freshman year was spent at the regional campus at Newark.
         I have a lot of favorite things! </p>
-    <p> <b style="color:Red">I love</b> nature and plants, my dorm is filled with succulents and plants that I take care of!
+    <p> <b>I love</b> nature and plants, my dorm is filled with succulents and plants that I take care of!
          I have a serious green thumb, if the plants under my care it’s going to survive! I had a new mystery plant start to sprout and im excited
          to see what it could be! My biggest plant win was getting a lemon tree to produce full lemons while being indoor and in Ohio.
          I also enjoy hiking and exploring nature where I can, my favorite state to explore is North Carolina. I have some great memories there
          as well as being amazed with the landscape, oceans and mountains in one! 
         Definitely wasn’t easy to do but I made a delicious lemon tart from the fruit!</p>
-    <p> <b style="color:Red">I love </b>art and teaching myself new artistic skills. My major is Arts and Technology so I’m hoping that my html abilities improve as time goes on!
+    <p> <b>I love </b>art and teaching myself new artistic skills. My major is Arts and Technology so I’m hoping that my html abilities improve as time goes on!
          This could be work that I do in my career! I enjoy the cross that happens between our technological advancements and our enjoyment for the aesthetics and amusement. </p>
-    <p> <b style="color:red">I love </b>to play video games! All types and whenever I can. I love interactive worlds and how beautiful the designers are able to make the spaces appear. 
+    <p> <b>I love </b>to play video games! All types and whenever I can. I love interactive worlds and how beautiful the designers are able to make the spaces appear. 
         There is so much to enjoy about every individual game and it’s so exciting to notice the new ideas that every game can offer to the gaming world. 
         There’s always a challenge presented to game designers in creating something new and engaging, and that is so impressive to me! Some of my favorite games include Minecraft, Overwatch, Stardew Valley,
         a bunch of indie games and Fallout New Vegas.</p>
