--- a/weeklyshub.html
+++ b/weeklyshub.html
@@ -15,12 +15,90 @@
             font-size: 20px;
             color:whitesmoke;
          }
-        h1 {color: darkblue; 
-        text-align: center;}
+        div {
+            font-size:40px;
+            margin-left:40%;
+            margin-right:40%;
+            color:rgb(33, 25, 36);
+            background-color:rgb(241, 241, 241);
+            font-family:'Courier New', Courier, monospace;
+            text-align:center;}
+        p{
+            color:rgb(33, 25, 36);
+            background-color:rgb(241, 241, 241);
+            font-family:'Courier New', Courier, monospace;
+            margin-left:5%;
+            margin-right:5%;
+            margin-top:0%;
+            padding-left:10px;
+            padding-right:10px;
+            padding-bottom:10px;
+            font-size:20px;
+        }
+        h1{
+            color:rgb(33, 25, 36);
+            background-color:rgb(241, 241, 241);
+            font-family:'Courier New', Courier, monospace;
+            
+            margin-left:5%;
+            margin-right:5%;
+            margin-bottom:0%;
+            padding-left:10px;
+            padding-right:10px;
+            padding-bottom:10px;
+        }
+        
     </style>
 </head>
 <body>
     <a href="./index.html"><img src="./pictures/bobross.PNG" alt="Bob Ross" width="5%" height="5%"></a>
-    <h1>Weeklys List</h1>
+    <div>Weeklys List</div>
+    <h1>Weekly A</h1>
+    <p>  This was the first week of class meaning that most of the things that we learned were things just to
+         get us started in learning html and CSS so that we can move on to more complicated procedures to make 
+         well formulated websites. We learned how to make text appear like using a p in brackets and how to 
+         change the appearance of that text to make it bigger or italicized with i in brackets. We also started going into
+         how to create links to other html pages through buttons that are connected to separate web pages. We 
+         learned how to insert images and frame them in the browser so that they look correct and fit the page 
+         well no matter the browser size by changing the parameters that we allow the image to take up in the 
+         screen to percentages. We also discussed some basics on css and how to assign text like paragraphs a 
+         certain color to appear as. Although I am still confused by it at times because the only line of code 
+         that I understand to change color, changes all of the items. For example, if I assigned “paragraphs” 
+         to be blue they would all be blue instead of having control of specific ones. I found difficulty when 
+         it came to linking buttons to a new web browser as it was a lot to remember and certain positioning of
+         lines of code that could easily be misplaced, to link a file the path has to lead through the files in 
+         the computer directly from where you want it and as someone who struggles with keeping things organized 
+         I know that will probably be annoying later for me as well when my files start getting cluttered.
+    </p>
+    <h1>Weekly B</h1>
+    <p>This week we went over how to set boxes and how to set them to fit within space differently. Which requires
+         mostly work in <i>CSS</i> to set dimensions and states for the box to exist as. We also learned when divs 
+         and spans are used. <b>Boxes and setting up borders</b> were very overwhelming for me to all take in. I 
+         know it will be something that I need to come back to and will be continuously working on to get better
+          at. They follow a lot of rules, yet to human eyes who are new to it, the rules and their orders can be 
+          very confusing to fix when an issue comes up. Some examples of the style position that borders can follow 
+          are static, relative, fixed, absolute, and sticky all with their own abilities. Static is as basic as 
+          you can go as it just goes with the form of the page unchanged. Relative is <i>“relative”</i> to the page 
+          where it moves with its size. Fixed always stays in the same place even if the page is scrolled. Absolute 
+          always stays in the same place even if the page is scrolled. Position sticky is positioned based on the 
+          user's scroll position. All of these different positions and their uses come in handy for different times 
+          and I understand that it'll be nice to have some memory of when they will be needed.</p>
+    <h1>Weekly C</h1>
+    <p>During this week of class we learned some more functionality and more details in complexities of CSS and what is 
+        possible to be accomplished through it. We also explored and showed our capablities of what we can do with collected information
+        in the form of two excersizes that challenged us to explore and attempt to make intrest in poems and a tags. </p>
+    <h1>Weekly D</h1>
+    <p>This week there was a focus on our first project whcih involved making a website to house all of our information
+         and future weeklys. I decided to go with a theme that revolves around thematic trends of the 90s and trying to
+        relate it back to that time woth the themes as well as bringing that styling into more futuristic html 
+        techniques while still keeping the colors and patterns of the 90s. I started my website and have run into some
+         problems just in lack of skill to measure up to where I want the website to be quality and ability wise. I 
+         would like to create a sticky box in the corner that has a pixel bob ross who has various lines of 
+        encouragement that it cycles through while you are on the page. I also want to keep the page organized and am
+        finding it difficult to get all of the moving parts to piece together in the perfect way. during our first 
+        session of working with our website design, I mostly tried to get down the different elements of the page, 
+        links to other sections and how the different boxes fill out the pages consistently. I am still in the process 
+        of fully fleshing out the boxes especially the sticky one that bob ross will be in, which has proven to be very 
+        finicky.</p>
 </body>
 </html>
