--- a/Gallery.html
+++ b/Gallery.html
@@ -15,26 +15,27 @@
         font-size: 20px;
         color:whitesmoke;
      }
+     img{
+        border:2px solid rgb(42, 197, 181);
+        
+     }
      div {
             font-size:40px;
-            color:rgb(33, 25, 36);
+            color:whitesmoke;
         text-align:center;
+        background-color:rgb(42, 197, 181);
+        margin-left:40%;
+        margin-right:40%;
     }
       </style>
 </head>
 <body>
-    <a href="./index.html"><img src="./pictures/bobross.PNG" alt="Bob Ross" width="5%" height="5%"></a>
-    <div > Who Am I?</div>
-    <img src="./pictures/ania.jpeg" alt="Ania" width="40%" height="40%">
-    <img src="./pictures/stare.jpeg" alt="Stare" width="40%" height="40%">
-    <img src="./pictures/green.jpeg" alt="Green" width="40%" height="40%">
-    <img src="./pictures/nesting.jpeg" alt="Nesting" width="40%" height="40%">
-    <img src="./pictures/room.jpeg" alt="Room" width="40%" height="40%">
-    <img src="./pictures/dorm.jpeg" alt="Dorm" width="40%" height="40%">
-    <img src="./pictures/two.jpeg" alt="Two" width="40%" height="40%">
-    <img src="./pictures/birds.jpeg" alt="Birds" width="40%" height="40%">
-    <img src="./pictures/education.jpeg" alt="Education" width="40%" height="40%">
-    <img src="./pictures/dance.jpeg" alt="Dancing" width="40%" height="40%">
-    <img src="./pictures/octo.jpeg" alt="Octopus" width="40%" height="40%">
+    <a href="./index.html"><img style="border:none" src="./pictures/bobross.PNG" alt="Bob Ross" width="5%" height="5%"></a>
+    <div > The Gallery </div>
+    <pre>           <img src="./pictures/ania.jpeg" alt="Ania" width="20%" height="20%">       <img src="./pictures/two.jpeg" alt="Two" width="20%" height="20%">      <img src="./pictures/green.jpeg" alt="Green" width="20%" height="20%">        <img src="./pictures/birds.jpeg" alt="Birds" width="20%" height="20%">
+
+            <img src="./pictures/nesting.jpeg" alt="Nesting" width="20%" height="20%">     <img src="./pictures/room.jpeg" alt="Room" width="20%" height="20%">        <img src="./pictures/dorm.jpeg" alt="Dorm" width="20%" height="20%">     <img src="./pictures/stare.jpeg" alt="Stare" width="20%" height="20%">       
+
+            <img src="./pictures/education.jpeg" alt="Education" width="20%" height="20%">      <img src="./pictures/dance.jpeg" alt="Dancing" width="20%" height="20%">        <img src="./pictures/octo.jpeg" alt="Octopus" width="40%" height="40%"></pre>
 </body>
 </html>
