--- a/weeklyshub.html
+++ b/weeklyshub.html
@@ -100,5 +100,19 @@
         links to other sections and how the different boxes fill out the pages consistently. I am still in the process 
         of fully fleshing out the boxes especially the sticky one that bob ross will be in, which has proven to be very 
         finicky.</p>
+    <h1>Weekly E</h1>
+    <p>This week was the week that we turned in and reviewed our websites along with starting to learn JavaScript 
+        functions through P5.js. My website was a tough challenge to make something I was content with and included 
+        a lot of tweaking and scrapping of work due to functionality and aesthetics. In the end I was proud of what 
+        I was able to create and believe it has a lot of room for growth and adaptation as well. But I do feel satisfied
+         with it as of now but hope to be able to add some more interactive elements like what I can do with the 
+         Bob Ross head that directs you as well as some more pages to explore as a whole. I really like my pixel 
+         art included in it and I find it to represent what I wanted very well. I hope to also add more definition
+          into the garden page so that it has more interactive elements and may align with the weather outside as it changes.
+        I have had some prior experience with JavaScript and p5.js and find myself refreshing my memory on its rules 
+        and functions and am very excited to have it work in unison with my html and css work. I do not know a lot
+         about javascript despite previous classes, so I am looking to push myself with it and create something that 
+         uses things I have not previously learned about. 
+        </p>
 </body>
 </html>
