--- a/weeklyshub.html
+++ b/weeklyshub.html
@@ -114,5 +114,21 @@
          about javascript despite previous classes, so I am looking to push myself with it and create something that 
          uses things I have not previously learned about. 
         </p>
+    <h1>Weekly F</h1>
+    This week was full of javascript and learning how to do simple animation like coding through it. We worked on excercise 4 in drawing
+    with code! I started with drawing a small picture of a dinosaur and planned to have a comet come in from the backrgound and explode 
+    upon reaching the ground near the dinosaur. It took a lot of working out to figure out the correct way to achieve the effects that I wanted
+    in that I would have a growing circle that moves diagonally from the top right corner to the center of the bottom of the canvas. 
+    It was difficult at first, because it was my first time, on how to figure out how to work out variables and how to get them to change and adjust
+    as the animation continues. I did a lot of adjusting with variable values and how where I put them and what I adjust change the effects
+    for a while I struggled to find how to create that diagonal movement but eventually I found the right sequence of math and movement. I also
+    wanted to create a small explosion at the end and ended up creating an if statement that played after the comet reached a certain position
+    so that it looked like it happens on impact. In this if statement I have a random circle be placed over and over to create a chaotic 
+    screen of colorful circles. I also introduced a set of words that would be chosen at random to appear with the explosion so that there 
+    would be a central focus to the ending. It was a lot of just working out the formats and tools but I feel very acomplished and like I have
+    a better understanding of the content!
+    <p>
+
+    </p>
 </body>
 </html>
