--- a/weeklyshub.html
+++ b/weeklyshub.html
@@ -129,5 +129,16 @@
     would be a central focus to the ending. It was a lot of just working out the formats and tools but I feel very acomplished and like I have
     a better understanding of the content!
     </p>
+    <h1>Weekly G</h1>
+    <p>
+        Durring class this week, we discussed more in detail on Javascript and complex commands and functions that can be utilized in it.
+        We discussed the random functions that offer some chance into the output of an event and we discussed how functions work and can be used
+        to make actions simpler. The next project coming up is one where we make a shape and create a function that varies some characteristics of that shape
+        so that a canvas with a lot of these shapes can be new and interesting with every refresh. For mine I am thinking about doing a variation in mug shapes or 
+        eveyn in types and colors of candies that would show up on the screen. For the mugs I would varry the height and width of the mugs as well as the color, positioning,
+        and maybe even the contents in the cup. I also plan to feature steam waves above the cups and may vary how those appear aswell. I am still figuring out how
+        to successfully use the functions and continue to get a bit tripped up on the formation and howw the variables work within it.
+        I hope to continue to working out my understanding of those principles so that I can successfully use them in this excersize.
+    </p>
 </body>
 </html>
