--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background-color:rgb(241, 241, 241);
         }
         img{
-            length:auto;
+            length: auto;
             width: 20%;
         }
         img:hover{
@@ -36,7 +36,7 @@
     </style>
     
 </head>
-   
+   <a href="./paintwbob.html"> Painting</a>
     <pre>                      <a href="./Gallery.html"><img src="./pictures/lisa.png" alt="Mona Lisa"></a> <a href="https://www.youtube.com/watch?v=-ykv1Md100Q&ab_channel=JGaspar"><img src="./pictures/bobross.PNG" alt="Bob Ross" style="width:40%"></a> <a href="./Aboutme.html"><img Src="./pictures/IMG_0049.PNG" alt=selfportait width="20%" height="20%"></a></pre>
    <pre>                                                              <a href="./garden.html"><img src="./pictures/IMG_0044.PNG"></a>          <a href="./weeklyshub.html"><img src="./pictures/board.png" alt="Clipboard"></a></pre>
       
