--- a/Gallery.html
+++ b/Gallery.html
@@ -28,6 +28,7 @@
         margin-right:40%;
     }
       </style>
+      <!-- Fix up the gallery, make it look better, add works? add descriptions?-->
 </head>
 <body>
     <a href="./index.html"><img style="border:none" src="./pictures/bobross.PNG" alt="Bob Ross" width="5%" height="5%"></a>
