--- a/Switch.html
+++ b/Switch.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Switch</title>
+   <script src="p5.min.js"></script>
+    <script src="p5.js"></script>
+    <title>Mugs</title>
+    <style>
+        body{
+         background-image:url('./pictures/yellowroom.avif'); background-size:cover;
+        }
+        p {
+            font-size: 35px;
+            background-color:goldenrod;
+            margin-right: 80%;
+            border: 5px solid rgb(118, 103, 21);
+        }
+    </style>
 </head>
 <body>
     <a href="./index.html"><img src="./pictures/bobross.PNG" alt="Bob Ross" width="5%" height="5%"></a>
-    <!-- Create a page with a switch and a screen, add a little interactive ganme onto the screen-->
+    <p>Refresh the Page! See what changes!</p>
 </body>
 </html>
