--- a/weeklyshub.html
+++ b/weeklyshub.html
@@ -140,5 +140,13 @@
         to successfully use the functions and continue to get a bit tripped up on the formation and howw the variables work within it.
         I hope to continue to working out my understanding of those principles so that I can successfully use them in this excersize.
     </p>
+    <h1> Weekly K</h1>
+    <p>This week was the week where we finished all of our work up for the final project, for mine I did a lot of work and troubleshooting to get
+        a working paintable canvas to be attached to this website, its not perfect but in the state that it is in, it took a lot already and is functional enough.
+        I also worked on making additions to other pages on the website like the gallery having an extra animation when the images are hovered over that gives a deeper explaination
+    of the work presented. As well as improving my way of formating the work as the "pre" would not have held up as well as my nesting dolls of div tags.
+    I also implemented my mug random animation so that it is another path for users to explore and play around with. I added a small room as a background and text to let the user]
+    know how to get it to do something of intrest. I am happy with the work I put into improving the website and feel like the improvements and additions make the website more interesting to 
+see and explore as well as keep users engaged with the many silly routes for longer.   </p>
 </body>
 </html>
