--- a/weeklyshub.html
+++ b/weeklyshub.html
@@ -147,6 +147,7 @@
     of the work presented. As well as improving my way of formating the work as the "pre" would not have held up as well as my nesting dolls of div tags.
     I also implemented my mug random animation so that it is another path for users to explore and play around with. I added a small room as a background and text to let the user]
     know how to get it to do something of intrest. I am happy with the work I put into improving the website and feel like the improvements and additions make the website more interesting to 
-see and explore as well as keep users engaged with the many silly routes for longer.   </p>
+see and explore as well as keep users engaged with the many silly routes for longer. With the semester coming to the end, I definitely feel that I improved and gained a lot of knowledge that will
+help me in the future, Im excited to keep exploring and learning as I go on and am very happy with my progress thus far. </p>
 </body>
 </html>
